RESOLVED FIXED244742
[macOS 13] Opening the share sheet shouldn't clear the text selection
https://bugs.webkit.org/show_bug.cgi?id=244742
Summary [macOS 13] Opening the share sheet shouldn't clear the text selection
Wenson Hsieh
Reported 2022-09-02 17:14:11 PDT
Attachments
Wenson Hsieh
Comment 1 2022-09-03 11:23:02 PDT
EWS
Comment 2 2022-09-03 15:27:36 PDT
Committed 254136@main (d4b09926ba37): <https://commits.webkit.org/254136@main> Reviewed commits have been landed. Closing PR #3994 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.