Tools/TestWebKitAPI/cocoa/TestWKWebView.mm
@@ -374,6 +374,11 @@ NSEventMask __simulated_forceClickAssociatedEventsMask(id self, SEL _cmd)
     [self sendEvent:[NSEvent mouseEventWithType:eventType location:point modifierFlags:modifierFlags timestamp:_webView.eventTimestamp windowNumber:self.windowNumber context:[NSGraphicsContext currentContext] eventNumber:++gEventNumber clickCount:clickCount pressure:0]];
 }
 
+- (BOOL)canBecomeKeyWindow
+{
+    return _webView.forceWindowToBecomeKey || super.canBecomeKeyWindow;
+}
+
 #endif
 
 - (BOOL)isKeyWindow
@@ -461,6 +466,7 @@ static InputSessionChangeCount nextInputSessionChangeCount()
     InputSessionChangeCount _inputSessionChangeCount;
 #endif
 #if PLATFORM(MAC)
+    BOOL _forceWindowToBecomeKey;
     NSTimeInterval _eventTimestampOffset;
 #endif
 }
@@ -807,6 +813,16 @@ static WKContentView *recursiveFindWKContentView(UIView *view)
 - (NSTimeInterval)eventTimestamp
 {
     return GetCurrentEventTime() + _eventTimestampOffset;
+}
+
+- (BOOL)forceWindowToBecomeKey
+{
+    return _forceWindowToBecomeKey;
+}
+
+- (void)setForceWindowToBecomeKey:(BOOL)forceWindowToBecomeKey
+{
+    _forceWindowToBecomeKey = forceWindowToBecomeKey;
 }
 
 - (void)mouseDownAtPoint:(NSPoint)pointInWindow simulatePressure:(BOOL)simulatePressure
